test/chainsaw/account-initializer/account-org.yaml
apiVersion: core.platform-mesh.io/v1alpha1
kind: Account
metadata:
  name: chainsaw
spec:
  creator: chainsaw@example.com
  displayName: "chainsaw test"
  type: org
