test/chainsaw/account-initializer/kcp-kubeconfig.yaml
apiVersion: v1
clusters:
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU5RENDQXR5Z0F3SUJBZ0lVRUlpVHc2V1AwRkVrZyszLzJvaTBmaUR1ZzZNd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0VqRVFNQTRHQTFVRUF4TUhjbTl2ZEMxallUQWVGdzB5TmpBeU1Ea3hNVEUxTWpCYUZ3MHpOakF5TURjeApNVEUxTWpCYU1CSXhFREFPQmdOVkJBTVRCM0p2YjNRdFkyRXdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDCkR3QXdnZ0lLQW9JQ0FRQzZ6bGxWZG5peUNiOURMemhZOHU4bHNlRFIwTkl4SVNEQ0grcHlUMkJTUXVtb3hHYWYKTlFXRExlVjV5Y3p0YXJaQ0RCNnhSY0M2UGFPV2Q5TGZDOEJoOXJPSENoQUtsajBXTTZsTzl2UERSUkZ6dEJv [...]
    server: https://localhost:8443/clusters/root
  name: root
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU5RENDQXR5Z0F3SUJBZ0lVRUlpVHc2V1AwRkVrZyszLzJvaTBmaUR1ZzZNd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0VqRVFNQTRHQTFVRUF4TUhjbTl2ZEMxallUQWVGdzB5TmpBeU1Ea3hNVEUxTWpCYUZ3MHpOakF5TURjeApNVEUxTWpCYU1CSXhFREFPQmdOVkJBTVRCM0p2YjNRdFkyRXdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDCkR3QXdnZ0lLQW9JQ0FRQzZ6bGxWZG5peUNiOURMemhZOHU4bHNlRFIwTkl4SVNEQ0grcHlUMkJTUXVtb3hHYWYKTlFXRExlVjV5Y3p0YXJaQ0RCNnhSY0M2UGFPV2Q5TGZDOEJoOXJPSENoQUtsajBXTTZsTzl2UERSUkZ6dEJv [...]
    server: https://localhost:8443/clusters/root:orgs
  name: root-orgs
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU5RENDQXR5Z0F3SUJBZ0lVRUlpVHc2V1AwRkVrZyszLzJvaTBmaUR1ZzZNd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0VqRVFNQTRHQTFVRUF4TUhjbTl2ZEMxallUQWVGdzB5TmpBeU1Ea3hNVEUxTWpCYUZ3MHpOakF5TURjeApNVEUxTWpCYU1CSXhFREFPQmdOVkJBTVRCM0p2YjNRdFkyRXdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDCkR3QXdnZ0lLQW9JQ0FRQzZ6bGxWZG5peUNiOURMemhZOHU4bHNlRFIwTkl4SVNEQ0grcHlUMkJTUXVtb3hHYWYKTlFXRExlVjV5Y3p0YXJaQ0RCNnhSY0M2UGFPV2Q5TGZDOEJoOXJPSENoQUtsajBXTTZsTzl2UERSUkZ6dEJv [...]
    server: https://localhost:8443/clusters/root:orgs:chainsaw
  name: root-orgs-chainsaw
contexts:
- context:
    cluster: root
    user: kcp-admin
  name: root
- context:
    cluster: root-orgs
    user: kcp-admin
  name: root-orgs
- context:
    cluster: root-orgs-chainsaw
    user: kcp-admin
  name: root-orgs-chainsaw
current-context: root
kind: Config
preferences: {}
users:
- name: kcp-admin
  user:
    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQWhTZ0F3SUJBZ0lVQ3dMRWpldmNHaGhGb1pYUThxUGtwOWVuN0ZFd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0pURWpNQ0VHQTFVRUF4TWFjbTl2ZEMxbWNtOXVkQzF3Y205NGVTMWpiR2xsYm5RdFkyRXdIaGNOTWpZdwpNakE1TVRFeE5USTRXaGNOTWpZd05URXdNVEV4TlRJNFdqQXpNUmt3RndZRFZRUUtFeEJ6ZVhOMFpXMDZhMk53Ck9tRmtiV2x1TVJZd0ZBWURWUVFERXcxamJIVnpkR1Z5TFdGa2JXbHVNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwcE5BSDF0cE5WdkY5a3BvRHdJWWtXU3dmb3U2c1FhVDJVM2VlQ3B1b3RyTgo [...]
    client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBcHBOQUgxdHBOVnZGOWtwb0R3SVlrV1N3Zm91NnNRYVQyVTNlZUNwdW90ck4vaG85CnczeUtXdXNud2t4U2JVYVJta0xsb0JDOWdrZHFYbXRLL3c0YVlHY1V3VmNnSHJJTFp5YjdzTitwS0RmNXRFVmwKd29KeXZFbHJwOFdrQmZEZjhDL0ZtaldwVWd4VlY4aER0NTFYSklVMzUxMG5BTVh5SUNTT3FQWDNSVXdMSSttVgpINTZsaFdHa1Z4THlzdTNCZUdMK2lnRENmYzhKS25ZWFcvSk1jN1Bic1N0eGFzUWxZOUdONVpiNm1nLzMzVFRxCmpmYnp3L3pCVWc4bVkzUndKVDFWeU4xUG9LVE9pY0dZV1Y1RDRIVVVycGJiSWlmeVh0S29hSXR2VG8vOWQzbGkKck9 [...]
